--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -25,7 +25,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.dating.mobile"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
     }
   }
 }
