feat(chat): 完成消息ACK/错误响应与前端状态管理；新增Avatar组件按性别提供默认头像；聊天列表与聊天页统一头像渲染；修复WebSocket同步问题并加载历史记录

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -26,11 +26,23 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.dating.mobile"
+      "package": "com.dating.mobile",
+      "permissions": [
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "允许应用获取位置信息来推荐附近用户"
+        }
+      ]
+    ]
   }
 }
 
